# force_control2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  helloDemo  main  main.cpp  main.cpp~  position.txt
COM check/1link check/: COMpos.plt  COMpos.txt  main.cpp
COM check/2link check/: COMpos.txt
COM check/3link check/: CMakeLists.txt  COMpos.txt  main.cpp
LPF check/: LPF  data.plt
Nao Program/naoqi-sdk-1.14.5-linux32/: toolchain.xml
Nao Program/naoqi-sdk-1.14.5-linux32/workspace/AnglesSet/: AnglesSetModule.cpp  AnglesSetModule.h  CMakeLists.txt  Set.cpp  Set.h  main.cpp  qiproject.xml
Nao Program/naoqi-sdk-1.14.5-linux32/workspace/AnglesSet/build-crosstoolchain/: AnglesSet.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
force_kinematic_1link/: constant  constant.h  constant.h~  force_kinematic  force_kinematic.cpp  function.h
force_kinematic_2link/: constant.h  data.plt  force.h  force_kinematic.cpp  function.h  state.cpp  state.h
renew/: CMakeCache.txt  CMakeLists.txt  COMpos.txt  Makefile  Pos.plt  cmake_install.cmake  data.plt  data2.plt  edge.plt  edge.plt~  edgepos.txt  force.txt  helloDemo  main.cpp  pos_COM.plt  position.txt  position_J.txt
renew/COM check/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
renew/LPF check/: LPF.cpp  signal.txt
robot joint/: CMakeCache.txt  Link.h  constant.h  main.cpp  manipulator.cpp  manipulator.h
trajectory generation/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  t-gene.cpp  t-gene.plt  t-gene.plt~  t-gene.txt
(+96 files in other folders)
